--- a/language/en.json
+++ b/language/en.json
@@ -9,7 +9,7 @@
   "english": "English",
   "spanish": "Spanish",
   "wedding_date": "May 23rd 2026",
-  "wedding_title": "Marta & Christian\nWedding Ceremony",
+  "wedding_title": "Marta & Christian\nwedding",
   "get_married": "We're getting married!",
   "save_the_date": "Save the date!",
   "wedding_countdown_title": "The Wedding Countdown",
@@ -61,10 +61,10 @@
   "wedding_ceremony": "Wedding Ceremony",
   "wedding_ceremony_desc": "Where we’ll say ‘I do’ surrounded by family, friends, and love.",
   "lunch": "Lunch Time",
-  "lunch_desc": "Drinks, nibbles, and a joyful lunch together.",
+  "lunch_desc": "Cocktail-style aperitif and lunch",
   "party_time": "Party time",
-  "party_desc": "Music, dancing, and plenty of celebration. Let’s make it a night to remember.",
-  "intro_rata": "Your presence truly means the world to us on such a special day.\n\nIf you’d like to give us a gift, we would really appreciate it in cash, if possible.\n\nBut if it's easier for you, feel free to send a transfer to the account below:",
+  "party_desc": "Party Hard",
+    "intro_rata": "Your presence truly means the world to us on such a special day.\n\nIf you’d like to give us a gift, we would really appreciate it in cash, if possible.\n\nBut if it's easier for you, feel free to send a transfer to the account below:",
   "iban": "IBAN: ",
   "iban_number": "IE13AIBK93129229667071",
   "bic": "BIC: ",
@@ -73,7 +73,7 @@
   "account_number": "29667071",
   "music_survey": "Contact us",
   "music_survey_desc": "If you have any questions, please contact us at the following phone numbers:",
-  "submit_button": "We’ll be happy to assist you!",
+  "submit_button": "Send",
   "swal_done_title": "Done",
   "swal_done_text": "Sent successfully.",
   "swal_error_title": "Error",
