--- a/language/es.json
+++ b/language/es.json
@@ -8,7 +8,7 @@
   "navigation_contact": "Contacto",
   "spanish": "Español",
   "wedding_date": "23 de Mayo de 2026",
-  "wedding_title": "Marta y Christian\nCeremonia de boda",
+  "wedding_title": "Boda de \n Marta y Christian",
   "get_married": "¡Nos casamos!",
   "save_the_date": "¡Reserva esta fecha!",
   "wedding_countdown_title": "La cuenta atrás para la boda",
@@ -32,14 +32,14 @@
   "dresscode_h3_gentlemen_3": "Corbata o pajarita obligatoria, aunque sea de color o estampado divertido.",
   "dresscode_h3_gentlemen_4": "Sin corbata o pajarita",
   "dresscode_h3_gentlemen_5": "Colores muy llamativos o estampados llamativos",
-  "dresscode_h3_gentlemen_6": "Zapatillas deportivas, mocasines informales o ropa casual",
-  "dresscode_h3_gentlemen_7": "Mangas remangadas, pantalones cortos o pantalón vaquero",
+  "dresscode_h3_gentlemen_6": "Zapatillas deportivas o ropa casual",
+  "dresscode_h3_gentlemen_7": "Pantalones cortos o vaqueros",
   "form_title": "¿Asistirás?",
   "form_description": "Hay algunos datos que necesitamos para organizar cada detalle. Por favor, responde a la encuesta antes del 10 de Febrero",
   "form_name_label": "Tu nombre",
   "form_guests_label": "¿Cuantos niños vienen contigo? (Dinos su edad en los comentarios adicionales)",
   "form_guests_placeholder": "Número de niños ",
-  "form_arrival_bus": "Autobús hacia la Hacienda (15:00)",
+  "form_arrival_bus": "Autobús hacia el Hotel (15:00)",
   "form_arrival_bus_yes": "Lo utilizaré",
   "form_arrival_bus_no": "No lo utilizaré",
     "form_couple": "¿Vendrás acompañado? (En caso afirmativo, indique el nombre en los comentarios adicionales)",
@@ -60,9 +60,9 @@
   "wedding_ceremony": "Ceremonia",
   "wedding_ceremony_desc": "Donde diremos ‘sí quiero’ rodeados de familia, amigos y mucho cariño.",
   "lunch": "Comida",
-  "lunch_desc": "Brindis, aperitivos y un almuerzo lleno de alegría.",
+  "lunch_desc": "Aperitivo tipo Coctel y almuerzo",
   "party_time": "Celebración",
-  "party_desc": "Música, baile y mucha fiesta. Hagamos que sea una noche inolvidable.",
+  "party_desc": "Party Hard",
   "intro_rata": "Vuestra presencia es lo más importante para nosotros en este día tan especial.\n\nSi además queréis tener un detalle, os agradeceríamos mucho que fuera en efectivo.\n\nPero si os resulta más cómodo, también podéis hacer una transferencia a esta cuenta:",
   "iban": "IBAN: ",
   "iban_number": "ES27 2100 6318 1602 0005 0487",
@@ -72,7 +72,7 @@
   "account_number": "2100 6318 1602 0005 0487",
   "music_survey": "Contáctanos",
   "music_survey_desc": "Para cualquier duda contáctanos a los siguientes teléfonos:",
-  "submit_button": " ¡Estaremos encantados de atenderte!",
+  "submit_button": "Enviar",
   "swal_done_title": "Hecho",
   "swal_done_text": "Enviado correctamente.",
   "swal_error_title": "Error",
