cambio imagenes y textos

--- a/language/en.json
+++ b/language/en.json
@@ -20,13 +20,13 @@
   "wedding_countdown_seconds": "Seconds",
   "dress_code_title": "Dress code",
   "dress_code_intro": "We kindly ask our guests to follow traditional Sevillian etiquette for a daytime church wedding. Here are some simple guidelines to help you choose your outfit:",
-  "dresscode_avoid": "Please, avoid",
+  "dresscode_avoid": "Please, avoid:",
   "dresscode_h3_lady": "For ladies",
-  "dresscode_h3_lady_1": "Short or midi dress. Ankle-length dresses are welcome, as long as they are light, elegant, and daytime-appropriate",
-  "dresscode_h3_lady_2": "Fabrics like silk, crepe, lace, or linen. Floral prints and soft or vibrant colors are ideal.",
-  "dresscode_h3_lady_3": "Evening gows",
-  "dresscode_h3_lady_4": "White or off-white (reserved for the bride)",
-  "dresscode_h3_lady_5": "Sequins or sparkly fabrics.",
+  "dresscode_h3_lady_1": "Short or midi dress. Ankle-length dresses are allowed as long as they are appropriate for a daytime wedding",
+  "dresscode_h3_lady_2": "Soft fabrics such as silk, crepe, lace or linen are ideal, as well as floral prints and soft or vibrant colors",
+  "dresscode_h3_lady_3": "Evening dresses",
+  "dresscode_h3_lady_4": "White, ivory or black",
+  "dresscode_h3_lady_5": "Sequins or shiny fabrics",
   "dresscode_h3_gentlemen": "For Gentlemen",
   "dresscode_h3_gentlemen_1": "Formal suit or blazer",
   "dresscode_h3_gentlemen_2": "Shirt",
@@ -46,7 +46,7 @@
   "form_couple": "Will you be coming with couple? (If yes, please specify the name in the additional comments.)",
   "form_couple_no": "No",
   "form_couple_yes": "Yes",
-  "form_return_bus": "Return bus",
+  "form_return_bus": "Return bus (00:00)",
   "form_return_bus_no": "Not using it",
   "form_menu": "Any specific diet?",
   "form_menu_option": "Select an option",
@@ -64,7 +64,7 @@
   "lunch_desc": "Cocktail-style aperitif and lunch",
   "party_time": "Party time",
   "party_desc": "Party Hard",
-    "intro_rata": "Your presence truly means the world to us on such a special day.\n\nIf you’d like to give us a gift, we would really appreciate it in cash, if possible.\n\nBut if it's easier for you, feel free to send a transfer to the account below:",
+  "intro_rata": "Your presence truly means the world to us on such a special day.\n\nIf you’d like to give us a gift, we would really appreciate it in cash, if possible.\n\nBut if it's easier for you, feel free to send a transfer to the account below:",
   "iban": "IBAN: ",
   "iban_number": "IE13AIBK93129229667071",
   "bic": "BIC: ",
