--- a/language/es.json
+++ b/language/es.json
@@ -19,13 +19,13 @@
   "wedding_countdown_seconds": "Segundos",
   "dress_code_title": "Código de vestimenta",
   "dress_code_intro": "Si esta es vuestra primera boda en Jerez, os dejamos unos consejos sobre el código de vestimenta para una boda de mañana:",
-  "dresscode_avoid": "Por favor, evita",
+  "dresscode_avoid": "Por favor, evita:",
   "dresscode_h3_lady": "Para las damas",
-  "dresscode_h3_lady_1": "Vestido corto o midi. Se admiten vestidos largos hasta el tobillo, siempre que sean ligeros, elegantes y adecuados para el día",
-  "dresscode_h3_lady_2": "Tejidos como seda, crepé, encaje o lino. Estampados florales y colores suaves o vibrantes son ideales.",
+  "dresscode_h3_lady_1": "Vestido corto o midi. Se admiten vestidos largos hasta el tobillo, siempre que sean adecuados para una boda de día",
+  "dresscode_h3_lady_2": "Son ideales tejidos suaves como seda, crepé, encaje o lino y estampados florales y colores suaves o vibrantes",
   "dresscode_h3_lady_3": "Vestidos de noche",
-  "dresscode_h3_lady_4": "Blanco o marfil (reservado para la novia)",
-  "dresscode_h3_lady_5": "Lentejuelas o tejidos brillantes.",
+  "dresscode_h3_lady_4": "Blanco, marfil o negro",
+  "dresscode_h3_lady_5": "Lentejuelas o tejidos brillantes",
   "dresscode_h3_gentlemen": "Para los caballeros",
   "dresscode_h3_gentlemen_1": "Traje formal o americana",
   "dresscode_h3_gentlemen_2": "Camisa",
@@ -45,7 +45,7 @@
     "form_couple": "¿Vendrás acompañado? (En caso afirmativo, indique el nombre en los comentarios adicionales)",
   "form_couple_no": "No",
   "form_couple_yes": "Sí",
-  "form_return_bus": "Autobús de regreso",
+  "form_return_bus": "Autobús de regreso (00:00)",
   "form_return_bus_no": "No lo utilizaré",
   "form_menu": "¿Sigues alguna dieta estecífica?",
   "form_menu_option": "Selecciona una opcion",
@@ -60,7 +60,7 @@
   "wedding_ceremony": "Ceremonia",
   "wedding_ceremony_desc": "Donde diremos ‘sí quiero’ rodeados de familia, amigos y mucho cariño.",
   "lunch": "Comida",
-  "lunch_desc": "Aperitivo tipo Coctel y almuerzo",
+  "lunch_desc": "Aperitivo tipo Cóctel y Almuerzo",
   "party_time": "Celebración",
   "party_desc": "Party Hard",
   "intro_rata": "Vuestra presencia es lo más importante para nosotros en este día tan especial.\n\nSi además queréis tener un detalle, os agradeceríamos mucho que fuera en efectivo.\n\nPero si os resulta más cómodo, también podéis hacer una transferencia a esta cuenta:",
