Cambio horas y añadir descuento

--- a/language/es.json
+++ b/language/es.json
@@ -11,6 +11,8 @@
   "wedding_title": "Boda de \n Marta y Christian",
   "get_married": "¡Nos casamos!",
   "save_the_date": "¡Reserva esta fecha!",
+  "save_hotel": "¡Si aún no tienes alojamiento puedes reservar en el Hotel Barceló con un descuento de invitado!",
+  "save_hotel2": "Reserva en el Hotel Barceló con descuento",
   "wedding_countdown_title": "La cuenta atrás para la boda",
   "wedding_countdown_date": "23 de Mayo de 2026",
   "wedding_countdown_days": "Días",
@@ -42,7 +44,7 @@
   "form_arrival_bus": "Autobús hacia el Hotel (15:00)",
   "form_arrival_bus_yes": "Lo utilizaré",
   "form_arrival_bus_no": "No lo utilizaré",
-    "form_couple": "¿Vendrás acompañado? (En caso afirmativo, indique el nombre en los comentarios adicionales)",
+  "form_couple": "¿Vendrás acompañado? (En caso afirmativo, indique el nombre en los comentarios adicionales)",
   "form_couple_no": "No",
   "form_couple_yes": "Sí",
   "form_return_bus": "Autobús de regreso (00:00)",
