--- a/language/en.json
+++ b/language/en.json
@@ -12,6 +12,8 @@
   "wedding_title": "Marta & Christian\nwedding",
   "get_married": "We're getting married!",
   "save_the_date": "Save the date!",
+  "save_hotel": "If you don’t have accommodation yet, you can book at the Barceló Hotel with a guest discount!",
+    "save_hotel2": "Book at Barceló Hotel with a discount",
   "wedding_countdown_title": "The Wedding Countdown",
   "wedding_countdown_date": "23 May 2026",
   "wedding_countdown_days": "Days",
