--- a/language/es.json
+++ b/language/es.json
@@ -37,7 +37,7 @@
   "dresscode_h3_gentlemen_6": "Zapatillas deportivas o ropa casual",
   "dresscode_h3_gentlemen_7": "Pantalones cortos o vaqueros",
   "form_title": "¿Asistirás?",
-  "form_description": "Hay algunos datos que necesitamos para organizar cada detalle. Por favor, responde a la encuesta antes del 10 de Febrero",
+  "form_description": "Hay algunos datos que necesitamos para organizar cada detalle. Por favor, responde a la encuesta antes del 10 de Abril",
   "form_name_label": "Tu nombre",
   "form_guests_label": "¿Cuantos niños vienen contigo? (Dinos su edad en los comentarios adicionales)",
   "form_guests_placeholder": "Número de niños ",
