Añadir carne o pescado al form

--- a/language/en.json
+++ b/language/en.json
@@ -13,7 +13,12 @@
   "get_married": "We're getting married!",
   "save_the_date": "Save the date!",
   "save_hotel": "If you don’t have accommodation yet, you can book at the Barceló Hotel with a guest discount!",
-    "save_hotel2": "Book at Barceló Hotel with a discount",
+  "save_hotel2": "Book at Barceló Hotel with a discount",
+ "dish1": "Main course (Guest)",
+  "dish2": "Main course (Guest’s companion)",
+  "dish_option1": "Vegetarian menu",
+  "dish_option2": "Oven-baked sea bass with king prawns in Palo Cortado sauce, served over sautéed vegetables",
+  "dish_option3": "Beef tenderloin with foie gras and truffle sauce with PX wine, served with potato cake",
   "wedding_countdown_title": "The Wedding Countdown",
   "wedding_countdown_date": "23 May 2026",
   "wedding_countdown_days": "Days",
