--- a/language/es.json
+++ b/language/es.json
@@ -13,6 +13,11 @@
   "save_the_date": "¡Reserva esta fecha!",
   "save_hotel": "¡Si aún no tienes alojamiento puedes reservar en el Hotel Barceló con un descuento de invitado!",
   "save_hotel2": "Reserva en el Hotel Barceló con descuento",
+  "dish1": "Plato principal (Invitado)",
+  "dish2": "Plato principal (Acompañante)",
+  "dish_option1": "Menú vegetariano",
+  "dish_option2": "Corvina al horno con gambones al palo cortado sobre verduritas salteadas",
+  "dish_option3": "Solomillo de ternera con foie y salsa de trufa al PX con pastel de patata",
   "wedding_countdown_title": "La cuenta atrás para la boda",
   "wedding_countdown_date": "23 de Mayo de 2026",
   "wedding_countdown_days": "Días",
